Fix about:flags information not showing up in chrome://net-export/ logs

Pass the command-line and channel as dependencies to StartNetLog() rather than saving them in the ChromeNetLog constructor.

The issue is that the CommandLine singleton may be mutated after ChromeNetLog has been initialized (it gets re-written to include synthesized switches for about:flags).

BUG=711432

Review-Url: https://codereview.chromium.org/2965623002
Cr-Commit-Position: refs/heads/master@{#483754}

Former-commit-id: 30355da69277622a7f6bb2129c0435b1e1223f49